# kaboom-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ENGINE_FLOW.md  GAME_ENGINE_API.md  GAME_RULES.md
examples/: example_game_simulation.py  game_info_demo.py  minimal_game_simulation.py  minimal_reaction_demo.py  random_policy_simulation.py  simulation.py
kaboom/: __init__.py  exceptions.py  version.py
kaboom/cards/: __init__.py  card.py
kaboom/game/: __init__.py  actions.py  engine.py  game_state.py  phases.py  reaction.py  results.py  turn.py  validators.py
kaboom/players/: __init__.py  player.py
kaboom/powers/: __init__.py  base.py  blind_swap.py  registry.py  see_and_swap.py  see_other.py  see_self.py  types.py
tests/: __init__.py  conftest.py  test_cards.py  test_deck.py  test_deck_reshuffle.py  test_endgame.py  test_engine.py  test_engine_invariants.py  test_game_engine.py  test_players.py  test_powers.py  test_reaction_engine.py  test_reactions.py  test_start_game_simulation.py  test_turn_actions.py
