[project]
name = "kaboom-engine"
dynamic = ["version"]
description = "Core game engine for the Kaboom card game."
authors = [{name="Arnav Ajay"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "kaboom.version.__version__"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"